<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="714dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="294dp"
            android:text="TextView" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/but_back" />

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        android:visibility="visible"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="2dp">

        <Button
            android:id="@+id/buttonPrevActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/but_name_prev_activity" />

        <EditText
            android:id="@+id/editTextSecActiv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/text"
            android:inputType="text"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pers"
            android:inputType="textPersonName"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/phone"
            android:inputType="number|phone"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/editTextNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/numb"
            android:inputType="numberDecimal"
            android:textColorHint="@color/green" />

        <EditText
            android:id="@+id/editTextTextEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="E-mail"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/green" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/but_forward" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>